--- a/action.yml
+++ b/action.yml
@@ -1,5 +1,5 @@
 name: 'Map Github Username to Slack Id'
-description: 'Accepts a GH Username, an inline JSON mapping of GH usernames to Slack ID's, and returns the desired slack id'
+description: 'Accepts a GH Username, an inline JSON mapping of GH usernames to Slack IDs, and returns the desired slack id'
 inputs: # id of input
   github-username:  
     description: 'Github username' 
